--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,5 @@
-registry=https://artifacts.arrival.services/
-//artifacts.arrival.services/:_authToken="dw7o7yTytD0yDryyk9PT4KMItifx5iDnLonjAszd14o="
+registry=https://artifacts.core.arrival.co/repository/all-npm/
+
+//artifacts.core.arrival.co/repository/all-npm/:_authToken=NpmToken.86d0decd-6c3c-3925-a7ff-376376f677fc
+//artifacts.core.arrival.co/repository/ce-frontend/:_authToken=NpmToken.86d0decd-6c3c-3925-a7ff-376376f677fc
+always-auth=true
