--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-    "name": "@arrival/web-wdio-e2e-kit",
+    "name": "@cybernated/web-wdio-e2e-kit",
     "version": "1.0.0",
+    "publishConfig": {
+        "registry": "https://artifacts.core.arrival.co/repository/ce-frontend/"
+    },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/cybernated/web-wdio-e2e-kit.git"
@@ -31,7 +34,7 @@
         ]
     },
     "dependencies": {
-        "@arrival/web-e2e-spec-creator": "1.0.0-dev",
+        "@cybernated/web-e2e-spec-creator": "1.0.0-dev",
         "@eigenspace/argument-parser": "1.0.4",
         "@wdio/cli": "5.14.5",
         "@wdio/local-runner": "5.14.5",
