--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -6,6 +6,7 @@
     },
     "include": [
         "**/*.spec.ts",
-        "**/*.d.ts"
+        "**/*.d.ts",
+        "../node_modules/@wdio/sync/webdriverio.d.ts"
     ]
 }
