--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@cybernated/web-wdio-browser-test-kit",
-    "version": "1.1.4",
+    "version": "1.1.5",
     "publishConfig": {
         "registry": "https://artifacts.core.arrival.co/repository/ce-frontend/"
     },
@@ -45,6 +45,7 @@
         "chromedriver": "84.0.0",
         "expect": "26.1.0",
         "jest-diff": "26.1.0",
+        "jest-image-snapshot": "4.1.0",
         "ts-node": "8.4.1",
         "tsconfig-paths": "3.9.0",
         "wdio-chromedriver-service": "6.0.3",
@@ -56,6 +57,8 @@
         "@eigenspace/common-types": "0.0.21-dev",
         "@eigenspace/helper-scripts": "2.0.5-core",
         "@types/jest": "26.0.7",
+        "@types/jest-image-snapshot": "3.1.0",
+        "@types/puppeteer-core": "2.0.0",
         "eslint": "5.16.0",
         "eslint-plugin-eigenspace-script": "0.0.18",
         "husky": "2.3.0",
