--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
             "node_modules/@types"
         ]
     },
+    "exclude": [
+        "node_modules/**/*"
+    ],
     "include": [
         "src",
         "node_modules/@wdio/sync/webdriverio-core.d.ts",
